--- a/Practice/BAEKJOON/for문.ipynb
+++ b/Practice/BAEKJOON/for문.ipynb
@@ -454,6 +454,10 @@
         "outputId": "bf185cf4-3568-4c29-e09b-1cc3bf2647f2"
       },
       "source": [
+        "# 10871\n",
+        "# X보다 작은 수\n",
+        "# 리스트 형태로 에러\n",
+        "\n",
         "A, B = map(int, input().split())\n",
         "C = list(map(int, input().split()))\n",
         "x = []\n",
@@ -481,21 +485,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "et8cq4jfW-9N",
-        "outputId": "c739e285-30d0-4678-c230-44a982a320e3"
+        "id": "OmxeBO_7XsV1",
+        "outputId": "fff9b0cd-03fc-40a6-ba78-3ee4a41f97a1"
       },
       "source": [
-        "n,x = map(int, input().split())\n",
-        "a = []\n",
-        "# 문자열 형태로 리스트에 저장받기(10개의 숫자)\n",
-        "b = input().split()\n",
-        "\n",
-        "for i in range(n):\n",
-        "    if int(b[i]) < x :\n",
-        "        a.append(b[i])\n",
-        "print(a)"
+        "A, B = map(int, input().split())\n",
+        "C = list(map(int, input().split()))\n",
+        "x = []\n",
+        "for i in range(A):\n",
+        "    if C[i] < B:\n",
+        "        x.append(str(C[i]))\n",
+        "print(' '.join(x))"
       ],
-      "execution_count": 37,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +505,7 @@
           "text": [
             "10 5\n",
             "1 10 4 9 2 3 8 5 7 6\n",
-            "['1', '4', '2', '3']\n"
+            "1 4 2 3\n"
           ]
         }
       ]
@@ -511,7 +513,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OmxeBO_7XsV1"
+        "id": "--rFaCXGiLmv"
       },
       "source": [
         ""
