--- a/Practice/BAEKJOON/While문.ipynb
+++ b/Practice/BAEKJOON/While문.ipynb
@@ -71,7 +71,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3Nbg63RvjC_0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3Nbg63RvjC_0",
+        "outputId": "7b4e2998-247c-4d37-f452-67dca4bd0c99"
+      },
+      "source": [
+        "# 10951\n",
+        "# A+B - 4\n",
+        "\n",
+        "while True:\n",
+        "    try:\n",
+        "        A, B = map(int, input().split())\n",
+        "        print(A + B)\n",
+        "    except:\n",
+        "        break"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 1\n",
+            "2\n",
+            " 2 3\n",
+            "5\n",
+            "3 4\n",
+            "7\n",
+            "9 8\n",
+            "17\n",
+            "5 2\n",
+            "7\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NSgF1vevlipu"
       },
       "source": [
         ""
