--- a/Practice/BAEKJOON/While문.ipynb
+++ b/Practice/BAEKJOON/While문.ipynb
@@ -47,7 +47,7 @@
         "    if(A == 0 and B == 0):\n",
         "        break"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -88,7 +88,7 @@
         "    except:\n",
         "        break"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -112,7 +112,65 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NSgF1vevlipu"
+        "id": "NSgF1vevlipu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6eb0b41f-393a-40bd-8fc1-c33ef9894622"
+      },
+      "source": [
+        "# 1110\n",
+        "# 더하기 사이클\n",
+        "x = input()\n",
+        "data = x\n",
+        "cnt = 0\n",
+        "\n",
+        "if int(data) < 10:\n",
+        "    cnt -= 1\n",
+        "\n",
+        "while True:\n",
+        "    if len(data) == 1:\n",
+        "        data = \"0\" + data[0]\n",
+        "        cnt += 1\n",
+        "    if len(data) ==2:\n",
+        "        if (int(data[0]) + int(data[1])) > 9:\n",
+        "            ex = str(int(data[0]) + int(data[1]))\n",
+        "            data = data[1] + ex[1]\n",
+        "            cnt += 1\n",
+        "        else:\n",
+        "            data = data[1] + str(int(data[0]) + int(data[1]))\n",
+        "            cnt += 1\n",
+        "    if int(data) == int(x):\n",
+        "        print(cnt)\n",
+        "        break"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "26\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c_WnpVDskR-3"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GjPtWmMkkPcK"
       },
       "source": [
         ""
