--- a/Practice/BAEKJOON/1차원_배열.ipynb
+++ b/Practice/BAEKJOON/1차원_배열.ipynb
@@ -149,10 +149,73 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3C8qtdGAqVKy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3C8qtdGAqVKy",
+        "outputId": "8b859eed-97e9-4970-c0ac-629ad1e0b451"
       },
       "source": [
-        ""
+        "x = []\n",
+        "y = []\n",
+        "\n",
+        "for i in range(10):\n",
+        "    num = int(input())\n",
+        "    x.append(num % 42)\n",
+        "\n",
+        "for i in x:\n",
+        "    if i not in y:\n",
+        "        y.append(i)\n",
+        "\n",
+        "len(y)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lS44M-1rvd4L"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "x = []\n",
+        "y = []\n",
+        "\n",
+        "for i in range(10):\n",
+        "    num = int(input())\n",
+        "    x.append(num % 42)\n",
+        "\n",
+        "    y = list(np.unique(x))\n",
+        "len(y)"
       ],
       "execution_count": null,
       "outputs": []
