--- a/Practice/BAEKJOON/1차원_배열.ipynb
+++ b/Practice/BAEKJOON/1차원_배열.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "1차원 배열.ipynb",
+      "name": "1차원_배열.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -34,7 +34,7 @@
         "\n",
         "print(min(y), max(y))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +69,7 @@
         "print(max(x))\n",
         "print(x.index(max(x)) + 1)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,6 +86,50 @@
             "61\n",
             "85\n",
             "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B4V8lu6pkiqt",
+        "outputId": "4b23b0b2-5b69-4959-df45-99139bb75631"
+      },
+      "source": [
+        "# 2577\n",
+        "# 숫자의 개수\n",
+        "A = int(input())\n",
+        "B = int(input())\n",
+        "C = int(input())\n",
+        "\n",
+        "x = str(A * B * C)\n",
+        "\n",
+        "for i in range(10):\n",
+        "    print(x.count(str(i)))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "150\n",
+            "266\n",
+            "427\n",
+            "3\n",
+            "1\n",
+            "0\n",
+            "2\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "2\n",
+            "0\n",
+            "0\n"
           ]
         }
       ]
@@ -116,7 +160,7 @@
         "    y = list(np.unique(x))\n",
         "len(y)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -153,7 +197,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3C8qtdGAqVKy",
-        "outputId": "8b859eed-97e9-4970-c0ac-629ad1e0b451"
+        "outputId": "0b75f17b-921d-45ea-e8a9-b41b9025f9b3"
       },
       "source": [
         "x = []\n",
@@ -169,53 +213,43 @@
         "\n",
         "len(y)"
       ],
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n",
-            "10\n"
+            "39\n",
+            "40\n",
+            "41\n",
+            "42\n",
+            "43\n",
+            "44\n",
+            "82\n",
+            "83\n",
+            "84\n",
+            "85\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "10"
+              "6"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 4
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lS44M-1rvd4L"
+        "id": "1FsNdqIYlk59"
       },
       "source": [
-        "import numpy as np\n",
-        "\n",
-        "x = []\n",
-        "y = []\n",
-        "\n",
-        "for i in range(10):\n",
-        "    num = int(input())\n",
-        "    x.append(num % 42)\n",
-        "\n",
-        "    y = list(np.unique(x))\n",
-        "len(y)"
+        ""
       ],
       "execution_count": null,
       "outputs": []
