--- a/Practice/BAEKJOON/1차원_배열.ipynb
+++ b/Practice/BAEKJOON/1차원_배열.ipynb
@@ -102,6 +102,7 @@
       "source": [
         "# 2577\n",
         "# 숫자의 개수\n",
+        "\n",
         "A = int(input())\n",
         "B = int(input())\n",
         "C = int(input())\n",
@@ -111,7 +112,7 @@
         "for i in range(10):\n",
         "    print(x.count(str(i)))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +147,7 @@
       "source": [
         "# 3052\n",
         "# 나머지\n",
-        "# 런타임 에러\n",
+        "# 런타임 에러(백준에서는 numpy사용 불가)\n",
         "\n",
         "import numpy as np\n",
         "\n",
@@ -197,9 +198,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3C8qtdGAqVKy",
-        "outputId": "0b75f17b-921d-45ea-e8a9-b41b9025f9b3"
+        "outputId": "aaccf523-6f12-4ca9-f878-20eca4ca6251"
       },
       "source": [
+        "# 3052\n",
+        "# 나머지\n",
+        "\n",
         "x = []\n",
         "y = []\n",
         "\n",
@@ -211,13 +215,13 @@
         "    if i not in y:\n",
         "        y.append(i)\n",
         "\n",
-        "len(y)"
+        "print(len(y))"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "39\n",
             "40\n",
@@ -228,28 +232,56 @@
             "82\n",
             "83\n",
             "84\n",
-            "85\n"
+            "85\n",
+            "6\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "6"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1FsNdqIYlk59"
+        "id": "1FsNdqIYlk59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4df90e2e-b6f4-4b72-d9a4-5d7017c209a4"
       },
       "source": [
-        ""
+        "# 1546\n",
+        "# 평균\n",
+        "\n",
+        "x = int(input())\n",
+        "Score = list(map(int, input().split()))\n",
+        "\n",
+        "NScore = 0\n",
+        "\n",
+        "for i in range(x):\n",
+        "    NScore += Score[i] / max(Score) * 100\n",
+        "\n",
+        "\n",
+        "print(NScore/x)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "40 80 60\n",
+            "75.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZbY2UyBArqoL"
+      },
+      "source": [
+        " "
       ],
       "execution_count": null,
       "outputs": []
