--- a/Practice/BAEKJOON/1차원_배열.ipynb
+++ b/Practice/BAEKJOON/1차원_배열.ipynb
@@ -278,10 +278,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZbY2UyBArqoL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZbY2UyBArqoL",
+        "outputId": "a9853519-19cf-40a8-ac87-37e5d8c2fa04"
       },
       "source": [
-        " "
+        " # 4344\n",
+        " # 평균은 넘겠지\n",
+        "\n",
+        " C = int(input())\n",
+        "\n",
+        "for i in range(C):\n",
+        "    cnt = 0\n",
+        "    Score = list(map(int, input().split()))\n",
+        "    avg = sum(Score[1:]) / Score[0]\n",
+        "    for k in range(Score[0]):\n",
+        "        if Score[k+1] > avg:\n",
+        "            cnt += 1\n",
+        "        answer = cnt / Score[0] * 100\n",
+        "    print(\"{0:.3f}%\".format(round(answer, 3)))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "5 50 50 70 80 100\n",
+            "40.000%\n",
+            "7 100 95 90 80 70 60 50\n",
+            "57.143%\n",
+            "3 70 90 80\n",
+            "33.333%\n",
+            "3 70 90 81\n",
+            "66.667%\n",
+            "9 100 99 98 97 96 95 94 93 91\n",
+            "55.556%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i65uRGsT_ant"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
