--- a/Practice/BAEKJOON/1차원_배열.ipynb
+++ b/Practice/BAEKJOON/1차원_배열.ipynb
@@ -217,7 +217,7 @@
         "\n",
         "print(len(y))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "\n",
         "print(NScore/x)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,6 +274,34 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "73IcY3BiKT3o"
+      },
+      "source": [
+        "# 8958\n",
+        "# OX퀴즈\n",
+        "\n",
+        "A = int(input())\n",
+        "X = []\n",
+        "\n",
+        "for i in range(A):\n",
+        "    ans = list(input())\n",
+        "    add =0\n",
+        "    for k in range(len(ans)):\n",
+        "        if(ans[k] == 'O'):\n",
+        "            add += 1\n",
+        "            if(ans[k-1] == 'O'):\n",
+        "                add += 1\n",
+        "        elif(ans[k] == 'X'):\n",
+        "            add += 0\n",
+        "    add += 0\n",
+        "    print(add)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -300,7 +328,7 @@
         "        answer = cnt / Score[0] * 100\n",
         "    print(\"{0:.3f}%\".format(round(answer, 3)))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
