--- a/Practice/BAEKJOON/1차원_배열.ipynb
+++ b/Practice/BAEKJOON/1차원_배열.ipynb
@@ -278,30 +278,53 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "73IcY3BiKT3o"
+        "id": "73IcY3BiKT3o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a1ee55b8-21b8-40eb-c3fa-9bd429cd9dc0"
       },
       "source": [
         "# 8958\n",
         "# OX퀴즈\n",
         "\n",
         "A = int(input())\n",
-        "X = []\n",
         "\n",
         "for i in range(A):\n",
-        "    ans = list(input())\n",
-        "    add =0\n",
-        "    for k in range(len(ans)):\n",
-        "        if(ans[k] == 'O'):\n",
-        "            add += 1\n",
-        "            if(ans[k-1] == 'O'):\n",
+        "    OX = list(input())\n",
+        "\n",
+        "    add = 0\n",
+        "    add1 = 0\n",
+        "\n",
+        "    for k in range(len(OX)):\n",
+        "        if OX[k] in OX:\n",
+        "            if OX[k] == 'O':\n",
         "                add += 1\n",
-        "        elif(ans[k] == 'X'):\n",
-        "            add += 0\n",
-        "    add += 0\n",
-        "    print(add)"
+        "                add1 += add\n",
+        "            if OX[k] == 'X':\n",
+        "                add = 0\n",
+        "    print(add1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "OOXXOXXOOO\n",
+            "10\n",
+            "OOXXOOXXOO\n",
+            "9\n",
+            "OXOXOXOXOXOXOX\n",
+            "7\n",
+            "OOOOOOOOOO\n",
+            "55\n",
+            "OOOOXOOOOXOOOOX\n",
+            "30\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
